kubernetes/ingress.yaml
# expose l'app vers l'extérieur 
#k3d inclut déjà un Ingress Controller (Traefik) par défaut, pas besoin de l'installer.apiVersion: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-portfolio-ingress
  namespace: devops-portfolio
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: devops-portfolio-rate-limit@kubernetescrd,devops-portfolio-security-headers@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-portfolio-svc
                port:
                  number: 80
