kubernetes/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-only
  namespace: devops-portfolio
spec:
  podSelector:
    matchLabels:
      app: devops-portfolio
  policyTypes:
    - Ingress
    # Autoriser uniquement le trafic entrant depuis le namespace kube-system
    #N'importe quel pod dans un AUTRE namespace que kube-system est bloque 
    #(ex: default, monitoring, argocd...)
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring 
      ports:
        - protocol: TCP
          port: 8000
